--- a/APPLICATION/pom.xml
+++ b/APPLICATION/pom.xml
@@ -10,9 +10,13 @@
   <name>APPLICATION</name>
   <url>http://maven.apache.org</url>
 
+
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
 
   <dependencies>
    
@@ -60,6 +64,50 @@
     <artifactId>poi-ooxml</artifactId>
     <version>4.0.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13.1</version>
+    <scope>test</scope>
+</dependency>
+      
+      
+      <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.8.1</version>
+</dependency>
+      
+        
+</dependencies>
+
+
+<build>
+
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        
+               <systemPropertyVariables>
+               <executionBrowser>${browsername}</executionBrowser>
+               </systemPropertyVariables>
+               
+                        
+                    </configuration>
+                </plugin>
+            </plugins>
+            
+            
+ </build>
  
-  </dependencies>
+
 </project>
+
+
